--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-# Copyright 2008 Kevin Ryde
+# Copyright 2008, 2009, 2010 Kevin Ryde
 
 # This file is part of Gtk2-Ex-TiedListColumn.
 #
@@ -16,18 +16,22 @@
 # with Gtk2-Ex-TiedListColumn.  If not, see <http://www.gnu.org/licenses/>.
 
 
+# Build-Depends could have the "maximum_tests" modules from META.yml
+# for more tests, but they're optional author tests really and would
+# just make the build tools drag in more stuff.
+
 Source: libgtk2-ex-tiedlistcolumn-perl
 Section: perl
 Priority: optional
-Build-Depends: cdbs, debhelper (>= 4)
+Build-Depends: cdbs, debhelper (>= 5)
 Maintainer: Kevin Ryde <user42@zip.com.au>
-Standards-Version: 3.8.0
-Homepage: http://www.geocities.com/user42_kevin/gtk2-ex-tiedlistcolumn/index.html
+Standards-Version: 3.8.4
+Homepage: http://user42.tuxfamily.org/gtk2-ex-tiedlistcolumn/index.html
 Bugs: mailto:user42@zip.com.au
 
 Package: libgtk2-ex-tiedlistcolumn-perl
 Architecture: all
-Depends: libgtk2-perl, ${misc:Depends}
+Depends: perl (>= 5.8), libgtk2-perl, ${misc:Depends}
 Description: Perl tied array accessing a Gtk TreeModel object
  Gtk2::Ex::TiedListColumn ties an array to a column of a
  Gtk2::TreeModel object.  Reading and writing the array reads and
