Import of KRYDE/Gtk2-Ex-TiedListColumn-3 from CPAN.
gitpan-cpan-distribution: Gtk2-Ex-TiedListColumn
gitpan-cpan-version:      3
gitpan-cpan-path:         KRYDE/Gtk2-Ex-TiedListColumn-3.tar.gz
gitpan-cpan-author:       KRYDE
gitpan-cpan-maturity:     released

--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Bugs: mailto:user42@zip.com.au
 
 Package: libgtk2-ex-tiedlistcolumn-perl
 Architecture: all
-Depends: perl (>= 5.8), libgtk2-perl, ${misc:Depends}
+Depends: perl (>= 5.8), libgtk2-perl, ${perl:Depends}, ${misc:Depends}
 Description: Perl tied array accessing a Gtk TreeModel object
  Gtk2::Ex::TiedListColumn ties an array to a column of a
  Gtk2::TreeModel object.  Reading and writing the array reads and
