--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Gtk2-Ex-TiedListColumn
-version:            3
+version:            4
 abstract:           Tie an array to a Gtk2-Perl TreeModel.
 author:
     - Kevin Ryde <user42@zip.com.au>
@@ -11,8 +11,9 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Gtk2:  0
-    perl:  5.008
+    Gtk2:                 0
+    Gtk2::Ex::ContainerBits:  21
+    perl:                 5.008
 resources:
     homepage:  http://user42.tuxfamily.org/gtk2-ex-tiedlistcolumn/index.html
     license:   http://www.gnu.org/licenses/gpl.html
@@ -31,16 +32,16 @@ optional_features:
         requires:
             Gtk2::Ex::Simple::TiedList:  0
             Pod::Simple::HTML:    0
+            warnings::unused:     0
     maximum_tests:
         description:  Have "make test" do as much as possible.
         requires:
             Parse::CPAN::Meta:   0
             Test::DistManifest:  0
-            Test::NoWarnings:    0
             Test::Pod:           1.00
             Test::Synopsis:      0
             Test::Weaken:        2.000
-            Test::YAML::Meta:    0.13
+            Test::YAML::Meta:    0.15
             YAML:                0
             YAML::Syck:          0
             YAML::Tiny:          0
