--- a/debian/control
+++ b/debian/control
@@ -25,13 +25,13 @@ Section: perl
 Priority: optional
 Build-Depends: cdbs, debhelper (>= 5)
 Maintainer: Kevin Ryde <user42@zip.com.au>
-Standards-Version: 3.8.4
+Standards-Version: 3.9.1
 Homepage: http://user42.tuxfamily.org/gtk2-ex-tiedlistcolumn/index.html
 Bugs: mailto:user42@zip.com.au
 
 Package: libgtk2-ex-tiedlistcolumn-perl
 Architecture: all
-Depends: perl (>= 5.8), libgtk2-perl, ${perl:Depends}, ${misc:Depends}
+Depends: perl (>= 5.8), libgtk2-perl, libgtk2-ex-widgetbits-perl (>= 21), ${perl:Depends}, ${misc:Depends}
 Description: Perl tied array accessing a Gtk TreeModel object
  Gtk2::Ex::TiedListColumn ties an array to a column of a
  Gtk2::TreeModel object.  Reading and writing the array reads and
